# generating

./: .gitignore  README.md  generating.cabal
src/Algebra/: MPower.hs
src/Math/: DenseSeries.hs  Indexing.hs  SeriesIndex.hs  SparseSeries.hs
src/Math/Indexing/: Indexing.hs  Instances.hs  Labeled.hs
src/Math/SeriesIndex/: Free.hs  Labeled.hs
src/MathObj/: Series.hs  SeriesIndex.hs  SparseSeries.hs
src/MathObj/SeriesIndex/: Free.hs  Labeled.hs  Subscripted.hs
