name:                generating
version:             0.1.0.0
synopsis:         	 Generating functions, of any length and any variables
description:         A library for manipulating finite and infinite generating functions and formal power series. 
license:             MIT
license-file:        LICENSE
author:              Jason Carr
maintainer:          jcarr250@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:    Math.SparseSeries Math.SeriesIndex Math.SeriesIndex.Free Math.SeriesIndex.Labeled
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       numeric-prelude >= 0.3 && < 0.5,
                       containers >= 0.2 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
